# bachelor-lapiuk

./: .gitignore  CMakeLists.txt  CODEOWNERS  README.md  build.sh  build_tests.sh
app/: main.cpp
infrastructure/: .gitignore  main.tf
src/: main.cpp
src/core/: CMakeLists.txt
src/core/account_manager/: account_controller.cpp  account_controller.hpp  order_book.cpp  order_book.hpp
src/core/controllers/: account_rest_api_controller.cpp  account_rest_api_controller.hpp  account_rest_api_utils.hpp  market_data_controller.cpp  market_data_controller.hpp  market_data_utils.hpp  trading_stream_controller.cpp  trading_stream_controller.hpp  trading_stream_utils.hpp  user_data_stream_controller.cpp  user_data_stream_controller.hpp  user_data_stream_utils.hpp
src/core/net/: net.cpp  net.hpp
src/core/parsers/: account_rest_api_parser.cpp  account_rest_api_parser.hpp  common_parser_utils.hpp  market_data_parser.cpp  market_data_parser.hpp  trading_stream_parser.cpp  trading_stream_parser.hpp  user_data_stream_parser.cpp  user_data_stream_parser.hpp
src/core/stream/: market_stream.cpp  market_stream.hpp  stream.cpp  stream.hpp  trading_stream.cpp  trading_stream.hpp  user_data_stream.cpp  user_data_stream.hpp
src/core/utils/: constants.hpp  crypto.hpp  dotenv.hpp  event_publisher.hpp  fixed_num.cpp  fixed_num.hpp  helper_utils.hpp  json.cpp  json.hpp  log.hpp  queue.hpp  thread.hpp  time.hpp
src/net/: net.cpp  net.hpp
src/strategy/: CMakeLists.txt
src/strategy/strategies/: data_dispatcher.cpp  data_dispatcher.hpp  mean_reversion.cpp  mean_reversion.hpp  strategy.hpp  strategy_manager.cpp  strategy_manager.hpp
src/stream/: market_stream.cpp  market_stream.hpp  stream.cpp  stream.hpp  user_data_stream.cpp  user_data_stream.hpp
src/utils/: constants.hpp  crypto.hpp  json.cpp  json.hpp  log.hpp  queue.hpp  thread.hpp  time.hpp
strategy_poc/: poc_backtest_core.py  poc_mean_reversion_analysis.py  poc_mean_reversion_rigorous.ipynb  poc_no_trend.ipynb  poc_trend.ipynb  poc_trend_detection.ipynb  poc_trend_detection.py  preprocess.ipynb  requirements.txt
tests/: CMakeLists.txt
tests/account_manager/: test_account_config.cpp  test_account_controller.cpp  test_account_storage.cpp  test_order_book.cpp
tests/controllers/: test_market_request.cpp  test_subscriptions_list.cpp  test_user_event_publisher.cpp
tests/net/: test_net_error.cpp
tests/parsers/: test_account_rest_api_parser.cpp  test_market_data_parser.cpp  test_trading_stream_parser.cpp  test_user_data_stream_parser.cpp
tests/stream/: test_market_stream_builder.cpp  test_parameters_builder.cpp
tests/utils/: test_async_timer.cpp  test_constants.cpp  test_crypto_errors.cpp  test_dotenv.cpp  test_fixed_num.cpp  test_helper_utils.cpp  test_json_query.cpp  test_log.cpp  test_queue.cpp  test_thread.cpp
